openshift/demos/ocp-acs/deployment/30-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: settlement-app
  name: settlement-app
  namespace: vulnerable-log4j
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: settlement-app
    weight: 100
  wildcardPolicy: None
